8259392: Zero error reporting is broken after JDK-8255711

Reviewed-by: dholmes